--- a/index.html
+++ b/index.html
@@ -85,9 +85,7 @@
         <div class="services-boards">
           <div class="service-board bg-gray">
             <div class="left-col">
-              <h3>Search engine</h3>
-              <h3>optimization</h3>
-
+              <h3 class="bg-primary">Search engine <br />optimization</h3>
               <p>Learn more</p>
             </div>
             <div class="right-col">
@@ -95,11 +93,9 @@
               <img class="service-img" src="images/seo.png" alt="" srcset="" />
             </div>
           </div>
-
           <div class="service-board bg-primary">
             <div class="left-col">
-              <h3>Pay-per-click <span>advertising</span></h3>
-
+              <h3 class="bg-gray">Pay-per-click <span>advertising</span></h3>
               <p>Learn more</p>
             </div>
             <div class="right-col">
@@ -108,51 +104,102 @@
             </div>
           </div>
 
-          <div class="service-board">
+          <div class="service-board bg-black">
             <div class="left-col">
-              <h3>Social Media Marketing</h3>
-
-              <img src="/images/arrow-w.png" alt="" srcset="" />
+              <h3 class="bg-white">Social Media Marketing</h3>
               <p>Learn more</p>
             </div>
             <div class="right-col">
-              <img src="images/smm.png" alt="" srcset="" />
+              <img class="arrow-g" src="/images/arrow-w.png" alt="" srcset="" />
+              <img class="service-img" src="images/smm.png" alt="" srcset="" />
             </div>
           </div>
 
-          <div class="service-board">
+          <div class="service-board bg-gray">
             <div class="left-col">
-              <h3>Email Marketing</h3>
-
-              <img src="/images/arrow-g.png" alt="" srcset="" />
+              <h3 class="bg-primary">Email Marketing</h3>
               <p>Learn more</p>
             </div>
             <div class="right-col">
-              <img src="images/em.png" alt="" srcset="" />
+              <img class="arrow-g" src="/images/arrow-g.png" alt="" srcset="" />
+              <img class="service-img" src="images/em.png" alt="" srcset="" />
             </div>
           </div>
 
-          <div class="service-board">
+          <div class="service-board bg-primary">
             <div class="left-col">
-              <h3>Content Creation</h3>
-
-              <img src="/images/arrow-g.png" alt="" srcset="" />
+              <h3 class="bg-gray">Content Creation</h3>
               <p>Learn more</p>
             </div>
             <div class="right-col">
-              <img src="images/cc.png" alt="" srcset="" />
+              <img class="arrow-g" src="/images/arrow-g.png" alt="" srcset="" />
+              <img class="service-img" src="images/cc.png" alt="" srcset="" />
             </div>
           </div>
 
-          <div class="service-board">
+          <div class="service-board bg-black">
             <div class="left-col">
-              <h3>Analytics and Tracking</h3>
-
-              <img src="/images/arrow-w.png" alt="" srcset="" />
+              <h3 class="bg-white">Analytics and Tracking</h3>
               <p>Learn more</p>
             </div>
             <div class="right-col">
-              <img src="images/aat.png" alt="" srcset="" />
+              <img class="arrow-g" src="/images/arrow-w.png" alt="" srcset="" />
+              <img class="service-img" src="images/aat.png" alt="" srcset="" />
+            </div>
+          </div>
+
+          <div class="service-boardx">
+            <h3 class="text-left">Let's make things happen</h3>
+
+            <p class="text-left">
+              Contact us today to learn more about how our digitalmarketing
+              services can hel your business grow and succeed online.
+            </p>
+            <a href="#">Get your proposal</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="caseStudies">
+      <div class="container">
+        <div class="case-call">
+          <h2 class="bg-primary">Case Studies</h2>
+
+          <p class="text-sm">
+            Explore Real-Life Examples of Our Proven Digital Marketing Success
+            through Our Case Studies
+          </p>
+
+          <div class="case-boards">
+            <div class="case-board bg-black">
+              <p>
+                For a local restaurant, we implemented a targeted PPC campaign
+                that resulted in a 50% incase in website traffic and 25%
+                increase in sales.
+              </p>
+              <div class="link">
+                <a href="#"
+                  >Learn more
+                  <img src="images/arrow-g.png" alt="" srcset="" />
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="work-process">
+            <div class="head-ds">
+              <h2 class="bg-primary">Our Working</h2>
+              <br />
+              <h2>Process</h2>
+            </div>
+            <p>Step-by-Step Guide to Achieving Your Business Goals</p>
+            <div class="process-cards">
+              <div class="process-card">
+                <h2>01</h2>
+                <p>Consultation</p>
+                
+              </div>
             </div>
           </div>
         </div>
